Hover box color

--- a/less/faculties/faelles.less
+++ b/less/faculties/faelles.less
@@ -37,7 +37,7 @@ h2 {
       color: @ku-red;
 
       &:hover {
-        background: @ku-gray-hover;
+        background: @gray-lighter;
         border: 1px solid @ku-red-hover;
       }
     }
@@ -76,7 +76,7 @@ h2 {
       color: @blue;
 
       &:hover {
-        background: @ku-gray-hover;
+        background: @gray-lighter;
         border: 1px solid @blue-hover;
       }
     }
@@ -115,7 +115,7 @@ h2 {
       color: @green;
 
       &:hover {
-        background: @ku-gray-hover;
+        background: @gray-lighter;
         border: 1px solid @green-hover;
       }
     }
@@ -154,7 +154,7 @@ h2 {
       color: @ku-gridbox-text;
 
       &:hover {
-        background: @ku-gray-hover;
+        background: @gray-lighter;
         border: 1px solid @ku-darkgray-hover;
       }
     }
@@ -193,7 +193,7 @@ h2 {
       color: @ku-darkblue;
 
       &:hover {
-        background: @ku-gray-hover;
+        background: @gray-lighter;
         border: 1px solid @ku-darkblue-hover;
       }
     }
