--- a/less/faculties/jur.less
+++ b/less/faculties/jur.less
@@ -28,7 +28,7 @@ h2 {
       color: @jura;
 
       &:hover {
-        background: @ku-gray-hover;
+        background: @gray-lighter;
         border: 1px solid @jura-hover;
       }
     }
@@ -67,7 +67,7 @@ h2 {
       color: @jura-sub_1;
 
       &:hover {
-        background: @ku-gray-hover;
+        background: @gray-lighter;
         border: 1px solid @jura-sub_1-hover;
       }
     }
@@ -106,7 +106,7 @@ h2 {
       color: @jura-sub_2;
 
       &:hover {
-        background: @ku-gray-hover;
+        background: @gray-lighter;
         border: 1px solid @jura-sub_2-hover;
       }
     }
@@ -145,7 +145,7 @@ h2 {
       color: @ku-gridbox-text;
 
       &:hover {
-        background: @ku-gray-hover;
+        background: @gray-lighter;
         border: 1px solid @jura-sub_3-hover;
       }
     }
@@ -187,7 +187,7 @@ h2 {
       color: @jura-sub_4;
 
       &:hover {
-        background: @ku-gray-hover;
+        background: @gray-lighter;
         border: 1px solid @jura-sub_4-hover;
       }
     }
