--- a/less/faculties/teo.less
+++ b/less/faculties/teo.less
@@ -28,7 +28,7 @@ h2 {
       color: @teol;
 
       &:hover {
-        background: @ku-gray-hover;
+        background: @gray-lighter;
         border: 1px solid @teol-hover;
       }
     }
@@ -67,7 +67,7 @@ h2 {
       color: @teol-sub_1;
 
       &:hover {
-        background: @ku-gray-hover;
+        background: @gray-lighter;
         border: 1px solid @teol-sub_1-hover;
       }
     }
@@ -106,7 +106,7 @@ h2 {
       color: @teol-sub_2;
 
       &:hover {
-        background: @ku-gray-hover;
+        background: @gray-lighter;
         border: 1px solid @teol-sub_2-hover;
       }
     }
@@ -145,7 +145,7 @@ h2 {
       color: @ku-gridbox-text;
 
       &:hover {
-        background: @ku-gray-hover;
+        background: @gray-lighter;
         border: 1px solid @teol-sub_3-hover;
       }
     }
@@ -184,7 +184,7 @@ h2 {
       color: @teol-sub_4;
 
       &:hover {
-        background: @ku-gray-hover;
+        background: @gray-lighter;
         border: 1px solid @teol-sub_4-hover;
       }
     }
