--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -176,7 +176,7 @@
 
       &.with-img {
         &:hover {
-          background: @ku-gray-hover;
+          background: @gray-lighter;
           border: 1px solid @brown-hover;
         }
       }
@@ -364,7 +364,7 @@
     background: @white-color!important;
 
     &:hover {
-      background: @ku-gray-hover!important;
+      background: @gray-lighter!important;
     }
 
     .header {
