--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -225,11 +225,6 @@
       font-weight: 700;
       letter-spacing: 0.4px;
     }
-    // .text {
-    //   @media (min-width: @screen-md) {
-    //     font-size: @font-size-body-desktop;
-    //   }
-    // }
   }
 
   .box2 {
@@ -253,6 +248,9 @@
   &.no-arrow {
     &::before {
       display: none;
+    }
+    .text {
+      padding-right: 10px;
     }
   }
 
