FAK color cleanup

--- a/less/faculties/faelles.less
+++ b/less/faculties/faelles.less
@@ -37,7 +37,6 @@ h2 {
       color: @ku-red;
 
       &:hover {
-        background: @gray-lighter;
         border: 1px solid @ku-red-hover;
       }
     }
@@ -76,7 +75,6 @@ h2 {
       color: @blue;
 
       &:hover {
-        background: @gray-lighter;
         border: 1px solid @blue-hover;
       }
     }
@@ -115,7 +113,6 @@ h2 {
       color: @green;
 
       &:hover {
-        background: @gray-lighter;
         border: 1px solid @green-hover;
       }
     }
@@ -151,10 +148,9 @@ h2 {
 
     &.outlined {
       border: 1px solid @ku-darkgray;
-      color: @ku-gridbox-text;
+      color: @ku-darkgray;
 
       &:hover {
-        background: @gray-lighter;
         border: 1px solid @ku-darkgray-hover;
       }
     }
@@ -193,7 +189,6 @@ h2 {
       color: @ku-darkblue;
 
       &:hover {
-        background: @gray-lighter;
         border: 1px solid @ku-darkblue-hover;
       }
     }
