--- a/less/glyphicons.less
+++ b/less/glyphicons.less
@@ -1655,7 +1655,9 @@
   position: relative;
 }
 // Social icons to use anywhere
-
+.social-heading {
+  margin-top: 0;
+}
 .social-icons {
   display: flex;
   flex-wrap: wrap;
