--- a/less/alerts.less
+++ b/less/alerts.less
@@ -25,7 +25,7 @@
   }
 
   a {
-    text-decoration: overline;
+    text-decoration: underline;
   }
 
   // Improve alignment and spacing of inner content
