--- a/less/tables.less
+++ b/less/tables.less
@@ -258,6 +258,7 @@ table {
 
 .table-responsive {
   overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
   min-height: 0.01%; // Workaround for IE9 bug (see https://github.com/twbs/bootstrap/issues/14837)
   @media screen and (max-width: @screen-xs-max) {
     width: 100%;
@@ -312,5 +313,8 @@ table {
         }
       }
     }
+  }
+  @media screen and (min-width: @screen-lg) {
+    overflow-x: hidden;
   }
 }
