--- a/less/tables.less
+++ b/less/tables.less
@@ -257,6 +257,7 @@ table {
 // will display normally.
 
 .table-responsive {
+  padding-right: 1px; // KU specific
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
   min-height: 0.01%; // Workaround for IE9 bug (see https://github.com/twbs/bootstrap/issues/14837)
