Paragraphs in flexible boxes

--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -387,6 +387,12 @@
   .text {
     padding: 0 25px 5px @padding10;
     color: inherit;
+    p {
+      margin: 3px 0;
+      &:first-child {
+        margin-top: 0;
+      }
+    }
   }
   // Height 298px
   &.size1 {
