--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -6,6 +6,7 @@
     right: 0;
     left: 0;
     z-index: 1020!important;
+    height: auto;
     padding: @padding20;
     color: @white-color;
     background: fade(lighten(@gray-light, 18%), 90%);
