Docs html tweaks

--- a/docs/_includes/nav/ku-nav.html
+++ b/docs/_includes/nav/ku-nav.html
@@ -1,16 +1,16 @@
 <header>
   <div class="navbar-inverse navbar-static-top ku-topbar" role="navigation">
     <div class="container relative">
-      <a tabindex="0" class="topbar-logo" title="Start" href="{{ site.baseurl }}/"></a>
+      <a class="topbar-logo" title="Start" href="{{ site.baseurl }}/"></a>
       <div id="topbar" class="navbar-collapse collapse">
-        <ul id="topbar_menu" class="nav navbar-nav navbar-right">
-          <li><a tabindex="0" href="#">Kalender</a></li>
-          <li><a tabindex="0" href="#">Find vej</a></li>
-          <li><a tabindex="0" href="#">Telefonbog</a></li>
-          <li><a tabindex="0" href="#">Job</a></li>
-          <li><a tabindex="0" href="#">A-Å-index</a></li>
-          <li><a tabindex="0" href="#">KUnet</a></li>
-          <li><a tabindex="0" class="engelsk" href="#">English</a></li>
+        <ul id="topbar_menu" class="nav navbar-nav navbar-right" role="menu">
+          <li><a role="menuitem" href="#">Kalender</a></li>
+          <li><a role="menuitem" href="#">Find vej</a></li>
+          <li><a role="menuitem" href="#">Telefonbog</a></li>
+          <li><a role="menuitem" href="#">Job</a></li>
+          <li><a role="menuitem" href="#">A-Å-index</a></li>
+          <li><a role="menuitem" href="#">KUnet</a></li>
+          <li><a role="menuitem" class="engelsk" href="#">English</a></li>
         </ul>
       </div>
       <a id="hamburger" href="#mobileleftmenu" class="navbar-toggle leftmenu-toggle" role="button">
@@ -26,72 +26,72 @@
   <div class="container">
     <div id="navbar" class="navbar-collapse collapse">
       <ul id="navbar_menu" class="nav navbar-nav" role="menu" aria-label="menu">
-        <li class="dropdown">
-          <a tabindex="0" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Uddannelser på KU</a>
+        <li class="dropdown" role="presentation">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Uddannelser på KU</a>
           <ul class="dropdown-menu">
-            <li><a tabindex="0" href="#">Bachelor</a></li>
-            <li><a tabindex="0" href="#">Kandidat</a></li>
-            <li><a tabindex="0" href="#">Ph.d.</a></li>
-            <li><a tabindex="0" href="#">Efter- og videreuddannelse</a></li>
+            <li role="presentation"><a role="menuitem" href="#">Bachelor</a></li>
+            <li role="presentation"><a role="menuitem" href="#">Kandidat</a></li>
+            <li role="presentation"><a role="menuitem" href="#">Ph.d.</a></li>
+            <li role="presentation"><a role="menuitem" href="#">Efter- og videreuddannelse</a></li>
           </ul>
         </li>
-        <li class="dropdown">
-          <a tabindex="0" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Forskning på KU</a>
+        <li class="dropdown" role="presentation">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Forskning på KU</a>
           <ul class="dropdown-menu">
-            <li><a tabindex="0" href="#">Styrkeområder</a></li>
-            <li><a tabindex="0" href="#">Forskningscentre</a></li>
-            <li><a tabindex="0" href="#">Ph.d.-programmer</a></li>
-            <li><a tabindex="0" href="#">Find en forsker</a></li>
+            <li role="presentation"><a role="menuitem" href="#">Styrkeområder</a></li>
+            <li role="presentation"><a role="menuitem" href="#">Forskningscentre</a></li>
+            <li role="presentation"><a role="menuitem" href="#">Ph.d.-programmer</a></li>
+            <li role="presentation"><a role="menuitem" href="#">Find en forsker</a></li>
           </ul>
         </li>
-        <li class="dropdown"><a tabindex="0" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#">Nyheder</a>
+        <li class="dropdown" role="presentation"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#">Nyheder</a>
             <ul class="dropdown-menu nyheder">
-                <li>
+                <li role="menuitem">
                     <img src="https://placehold.it/55x55" alt="">
-                    <a tabindex="0" href="#">Danmarks rigshospital for dyr slår dørene op. Her går man langt for dyrevelfærd. Hvad sker der hvis teksten er for lang?</a>
+                    <a href="#">Danmarks rigshospital for dyr slår dørene op. Her går man langt for dyrevelfærd. Hvad sker der hvis teksten er for lang?</a>
                     <div class="small">16. december 2017</div>
                 </li>
-                <li>
+                <li role="menuitem">
                     <img src="https://placehold.it/55x55" alt="">
-                    <a tabindex="0" href="#">Gode karakterer til studiemiljøet</a>
+                    <a href="#">Gode karakterer til studiemiljøet</a>
                     <div class="small">8. juni 2017</div>
                 </li>
-                <li>
+                <li role="menuitem">
                     <img src="https://placehold.it/55x55" alt="">
-                    <a tabindex="0" href="#">KU beklager behandling af studerende</a>
+                    <a href="#">KU beklager behandling af studerende</a>
                     <div class="small">7. marts 2017</div>
                 </li>
-                <li><a tabindex="0" href="https://nyheder.ku.dk/">Alle nyheder</a></li>
-                <li><a tabindex="0" href="https://nyheder.ku.dk/presseservice/">Presseservice</a></li>
+                <li role="presentation"><a role="menuitem" href="https://nyheder.ku.dk/">Alle nyheder</a></li>
+                <li role="presentation"><a role="menuitem" href="https://nyheder.ku.dk/presseservice/">Presseservice</a></li>
             </ul>
         </li>
-        <li class="dropdown">
-          <a tabindex="0" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Samarbejde</a>
+        <li class="dropdown" role="presentation">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Samarbejde</a>
           <ul class="dropdown-menu">
-            <li><a tabindex="0" href="#">Internationalt</a></li>
-            <li><a tabindex="0" href="#">Erhverv</a></li>
-            <li><a tabindex="0" href="#">ErhvervsPhD</a></li>
-            <li><a tabindex="0" href="#">Skoler og gymnasier</a></li>
-            <li><a tabindex="0" href="#">Alumni</a></li>
+            <li role="presentation"><a role="menuitem" href="#">Internationalt</a></li>
+            <li role="presentation"><a role="menuitem" href="#">Erhverv</a></li>
+            <li role="presentation"><a role="menuitem" href="#">ErhvervsPhD</a></li>
+            <li role="presentation"><a role="menuitem" href="#">Skoler og gymnasier</a></li>
+            <li role="presentation"><a role="menuitem" href="#">Alumni</a></li>
           </ul>
         </li>
-        <li class="dropdown">
-          <a tabindex="0" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Besøg KU</a>
+        <li class="dropdown" role="presentation">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Besøg KU</a>
           <ul class="dropdown-menu">
-            <li><a tabindex="0" href="#">Museer</a></li>
-            <li><a tabindex="0" href="#">Biblioteker</a></li>
-            <li><a tabindex="0" href="#">For skoler og gymnasier</a></li>
+            <li role="presentation"><a role="menuitem" href="#">Museer</a></li>
+            <li role="presentation"><a role="menuitem" href="#">Biblioteker</a></li>
+            <li role="presentation"><a role="menuitem" href="#">For skoler og gymnasier</a></li>
           </ul>
         </li>
-        <li class="dropdown">
-          <a tabindex="0" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Om KU</a>
+        <li class="dropdown" role="presentation">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Om KU</a>
           <ul class="dropdown-menu">
-            <li><a tabindex="0" href="#">Historie</a></li>
-            <li><a tabindex="0" href="#">Organisation</a></li>
-            <li><a tabindex="0" href="#">Ledelse</a></li>
-            <li><a tabindex="0" href="#">Fakulteter</a></li>
-            <li><a tabindex="0" href="#">Institutter</a></li>
-            <li><a tabindex="0" href="#">Kontakt</a></li>
+            <li role="presentation"><a role="menuitem" href="#">Historie</a></li>
+            <li role="presentation"><a role="menuitem" href="#">Organisation</a></li>
+            <li role="presentation"><a role="menuitem" href="#">Ledelse</a></li>
+            <li role="presentation"><a role="menuitem" href="#">Fakulteter</a></li>
+            <li role="presentation"><a role="menuitem" href="#">Institutter</a></li>
+            <li role="presentation"><a role="menuitem" href="#">Kontakt</a></li>
           </ul>
         </li>
       </ul>
