Docs html tweaks

--- a/docs/_includes/nav/ku-nav.html
+++ b/docs/_includes/nav/ku-nav.html
@@ -3,14 +3,14 @@
     <div class="container relative">
       <a class="topbar-logo" title="Start" href="{{ site.baseurl }}/"></a>
       <div id="topbar" class="navbar-collapse collapse">
-        <ul id="topbar_menu" class="nav navbar-nav navbar-right" role="menu">
-          <li><a role="menuitem" href="#">Kalender</a></li>
-          <li><a role="menuitem" href="#">Find vej</a></li>
-          <li><a role="menuitem" href="#">Telefonbog</a></li>
-          <li><a role="menuitem" href="#">Job</a></li>
-          <li><a role="menuitem" href="#">A-Å-index</a></li>
-          <li><a role="menuitem" href="#">KUnet</a></li>
-          <li><a role="menuitem" class="engelsk" href="#">English</a></li>
+        <ul id="topbar_menu" class="nav navbar-nav navbar-right" role="menubar" aria-label="Navigation">
+          <li role="presentation"><a role="menuitem" href="#">Kalender</a></li>
+          <li role="presentation"><a role="menuitem" href="#">Find vej</a></li>
+          <li role="presentation"><a role="menuitem" href="#">Telefonbog</a></li>
+          <li role="presentation"><a role="menuitem" href="#">Job</a></li>
+          <li role="presentation"><a role="menuitem" href="#">A-Å-index</a></li>
+          <li role="presentation"><a role="menuitem" href="#">KUnet</a></li>
+          <li role="presentation"><a role="menuitem" class="engelsk" href="#">English</a></li>
         </ul>
       </div>
       <a id="hamburger" href="#mobileleftmenu" class="navbar-toggle leftmenu-toggle" role="button">
