--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -4,7 +4,7 @@
 <footer id="footer">
   <div id="globalfooter" class="container-fluid">
     <div class="container">
-      <div class="row footercontent" role="menubar">
+      <div class="row footercontent" role="menubar" aria-label="Navigation">
         <div class="col-xs-3 footercolumn">
           <h3 data-heading="toggle" class="footer-heading visible-desktop hidden-xs">Københavns Universitet</h3>
           <h3 data-heading="toggle" class="footer-heading visible-mobil visible-xs-block hidden-sm">Organisation</h3>
@@ -58,21 +58,21 @@
             <li role="menuitem"><a href="http://velkommen.ku.dk/om-webstedet">Om websitet</a></li>
             <li role="menuitem"><a href="http://velkommen.ku.dk/om-webstedet/cookie-og-privatlivspolitik">Cookies og privatlivspolitik</a></li>
             <li role="menuitem"><a href="http://informationssikkerhed.ku.dk">Informationssikkerhed</a></li>
-            <li><a href="http://velkommen.ku.dk/indeks">A-Å-indeks</a></li>
+            <li role="menuitem"><a href="https://om.ku.dk/indeks/">A-Å-indeks</a></li>
           </ul>
           <div class="social-items">
             <h3 data-heading="open" class="footer-heading">Mød KU på</h3>
             <div class="social-item">
-              <a target="_blank" href="https://www.facebook.com/universitet" class="social-icon icon-facebook" title="Facebook"></a>
+              <a target="_blank" href="https://www.facebook.com/universitet" class="social-icon icon-facebook" title="Facebook" rel="noopener"></a>
             </div>
             <div class="social-item">
-              <a target="_blank" href="https://www.linkedin.com/edu/k%C3%B8benhavns-universitet-12012" class="social-icon icon-linkedin" title="LinkedIn"></a>
+              <a target="_blank" href="https://www.linkedin.com/edu/k%C3%B8benhavns-universitet-12012" class="social-icon icon-linkedin" title="LinkedIn" rel="noopener"></a>
             </div>
             <div class="social-item">
-              <a target="_blank" href="https://www.instagram.com/university_of_copenhagen/" class="social-icon icon-instagram" title="Instagram"></a>
+              <a target="_blank" href="https://www.instagram.com/university_of_copenhagen/" class="social-icon icon-instagram" title="Instagram" rel="noopener"></a>
             </div>
             <div class="social-item">
-              <a target="_blank" href="https://twitter.com/koebenhavns_uni" class="social-icon icon-twitter" title="Twitter"></a>
+              <a target="_blank" href="https://twitter.com/koebenhavns_uni" class="social-icon icon-twitter" title="Twitter" rel="noopener"></a>
             </div>
             <div class="social-item">
               <a target="_blank" href="http://velkommen.ku.dk/apps" class="social-icon icon-phone" title="KU Apps"></a>
@@ -81,16 +81,16 @@
               <a target="_blank" href="http://nyheder.ku.dk/rss/" class="social-icon icon-rss" title="RSS"></a>
             </div>
             <div class="social-item">
-              <a target="_blank" href="https://www.youtube.com/user/CopenhagenUniversity" class="social-icon icon-youtube" title="YouTube"></a>
+              <a target="_blank" href="https://www.youtube.com/user/CopenhagenUniversity" class="social-icon icon-youtube" title="YouTube" rel="noopener"></a>
             </div>
             <div class="social-item">
-              <a target="_blank" href="http://www.futurity.org/university/university-of-copenhagen" class="social-icon icon-futurity" title="futurity"></a>
+              <a target="_blank" href="http://www.futurity.org/university/university-of-copenhagen" class="social-icon icon-futurity" title="futurity" rel="noopener"></a>
             </div>
             <div class="social-item">
-              <a target="_blank" href="http://theconversation.com/institutions/university-of-copenhagen" class="social-icon icon-conversation" title="The Conversation"></a>
+              <a target="_blank" href="http://theconversation.com/institutions/university-of-copenhagen" class="social-icon icon-conversation" title="The Conversation" rel="noopener"></a>
             </div>
             <div class="social-item">
-              <a target="_blank" href="https://www.coursera.org/ucph" class="social-icon icon-coursera" title="Coursera"></a>
+              <a target="_blank" href="https://www.coursera.org/ucph" class="social-icon icon-coursera" title="Coursera" rel="noopener"></a>
             </div>
             <div class="social-item">
               <a target="_blank" href="http://video.ku.dk" class="social-icon icon-video" title="KU Videoportal"></a>
