--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -9,56 +9,56 @@
           <h3 data-heading="toggle" class="footer-heading visible-desktop hidden-xs">Københavns Universitet</h3>
           <h3 data-heading="toggle" class="footer-heading visible-mobil visible-xs-block hidden-sm">Organisation</h3>
           <ul class="footerlinks" role="menu">
-            <li role="menuitem"><a href="http://velkommen.ku.dk/ledelse-strategi/">Ledelse</a></li>
-            <li role="menuitem"><a href="http://velkommen.ku.dk/organisation/administration">Administration</a></li>
-            <li role="menuitem"><a href="http://velkommen.ku.dk/organisation/fakulteter">Fakulteter</a></li>
-            <li role="menuitem"><a href="http://velkommen.ku.dk/organisation/institutter">Institutter</a></li>
-            <li role="menuitem"><a href="http://forskning.ku.dk/centre">Forskningscentre</a></li>
-            <li role="menuitem"><a href="http://vetschool.ku.dk/om/VetOmDyrehospitaler">Dyrehospitaler</a></li>
-            <li role="menuitem"><a href="http://odont.ku.dk/for_patienter">Tandlægeskolen</a></li>
-            <li role="menuitem"><a href="http://kubis.ku.dk">Biblioteker</a></li>
-            <li role="menuitem"><a href="http://velkommen.ku.dk/besoeg/museer">Museer</a></li>
+            <li role="presentation"><a role="menuitem" href="http://velkommen.ku.dk/ledelse-strategi/">Ledelse</a></li>
+            <li role="presentation"><a role="menuitem" href="http://velkommen.ku.dk/organisation/administration">Administration</a></li>
+            <li role="presentation"><a role="menuitem" href="http://velkommen.ku.dk/organisation/fakulteter">Fakulteter</a></li>
+            <li role="presentation"><a role="menuitem" href="http://velkommen.ku.dk/organisation/institutter">Institutter</a></li>
+            <li role="presentation"><a role="menuitem" href="http://forskning.ku.dk/centre">Forskningscentre</a></li>
+            <li role="presentation"><a role="menuitem" href="http://vetschool.ku.dk/om/VetOmDyrehospitaler">Dyrehospitaler</a></li>
+            <li role="presentation"><a role="menuitem" href="http://odont.ku.dk/for_patienter">Tandlægeskolen</a></li>
+            <li role="presentation"><a role="menuitem" href="http://kubis.ku.dk">Biblioteker</a></li>
+            <li role="presentation"><a role="menuitem" href="http://velkommen.ku.dk/besoeg/museer">Museer</a></li>
           </ul>
         </div>
         <div class="col-xs-3 footercolumn">
           <h3 data-heading="toggle" class="footer-heading">Kontakt</h3>
           <ul class="footerlinks" role="menu">
-            <li role="menuitem"><a href="http://findvej.ku.dk">Find vej</a></li>
-            <li role="menuitem"><a href="http://ku.dk/vejviser">Find en medarbejder</a></li>
-            <li role="menuitem"><a href="http://velkommen.ku.dk/kontakt">Kontakt KU</a></li>
+            <li role="presentation"><a role="menuitem" href="http://findvej.ku.dk">Find vej</a></li>
+            <li role="presentation"><a role="menuitem" href="http://ku.dk/vejviser">Find en medarbejder</a></li>
+            <li role="presentation"><a role="menuitem" href="http://velkommen.ku.dk/kontakt">Kontakt KU</a></li>
           </ul>
           <h3 data-heading="toggle" class="footer-heading">Services</h3>
           <ul class="footerlinks" role="menu">
-            <li role="menuitem"><a href="http://nyheder.ku.dk/presseservice">Presseservice</a></li>
-            <li role="menuitem"><a href="http://designguide.ku.dk">Designguide</a></li>
-            <li role="menuitem"><a href="http://ku-shop.dk">Merchandise</a></li>
-            <li role="menuitem"><a href="http://it.ku.dk/kontakt/support_KU">IT-support</a></li>
-            <li role="menuitem"><a href="http://oko.ku.dk">CVR, EAN og bankoplysninger</a></li>
+            <li role="presentation"><a role="menuitem" href="http://nyheder.ku.dk/presseservice">Presseservice</a></li>
+            <li role="presentation"><a role="menuitem" href="http://designguide.ku.dk">Designguide</a></li>
+            <li role="presentation"><a role="menuitem" href="http://ku-shop.dk">Merchandise</a></li>
+            <li role="presentation"><a role="menuitem" href="http://it.ku.dk/kontakt/support_KU">IT-support</a></li>
+            <li role="presentation"><a role="menuitem" href="http://oko.ku.dk">CVR, EAN og bankoplysninger</a></li>
           </ul>
         </div>
         <div class="col-xs-3 footercolumn">
           <h3 data-heading="toggle" class="footer-heading">For studerende og ansatte</h3>
           <ul class="footerlinks" role="menu">
-            <li role="menuitem"><a class="padlock" href="http://intranet.ku.dk">KUnet</a><span class="icon icon-padlock"></span></li>
+            <li role="presentation"><a role="menuitem" class="padlock" href="http://intranet.ku.dk">KUnet</a><span class="icon icon-padlock"></span></li>
           </ul>
           <h3 data-heading="toggle" class="footer-heading">Job og karriere</h3>
           <ul class="footerlinks" role="menu">
-            <li role="menuitem"><a href="http://jobportal.ku.dk">Jobportalen</a></li>
-            <li role="menuitem"><a href="http://mangfoldighed.ku.dk">Mangfoldighed</a></li>
-            <li role="menuitem"><a href="http://alumni.ku.dk">Alumne</a></li>
+            <li role="presentation"><a role="menuitem" href="http://jobportal.ku.dk">Jobportalen</a></li>
+            <li role="presentation"><a role="menuitem" href="http://mangfoldighed.ku.dk">Mangfoldighed</a></li>
+            <li role="presentation"><a role="menuitem" href="http://alumni.ku.dk">Alumne</a></li>
           </ul>
           <h3 data-heading="toggle" class="footer-heading">Nødsituationer</h3>
           <ul class="footerlinks">
-            <li role="menuitem"><a href="http://akut.ku.dk">KU's sikkerhedsberedskab</a></li>
+            <li role="presentation"><a role="menuitem" href="http://akut.ku.dk">KU's sikkerhedsberedskab</a></li>
           </ul>
         </div>
         <div class="col-xs-3 footercolumn">
           <h3 data-heading="toggle" class="footer-heading">Web</h3>
           <ul class="footerlinks" role="menu">
-            <li role="menuitem"><a href="http://velkommen.ku.dk/om-webstedet">Om websitet</a></li>
-            <li role="menuitem"><a href="http://velkommen.ku.dk/om-webstedet/cookie-og-privatlivspolitik">Cookies og privatlivspolitik</a></li>
-            <li role="menuitem"><a href="http://informationssikkerhed.ku.dk">Informationssikkerhed</a></li>
-            <li role="menuitem"><a href="https://om.ku.dk/indeks/">A-Å-indeks</a></li>
+            <li role="presentation"><a role="menuitem" href="http://velkommen.ku.dk/om-webstedet">Om websitet</a></li>
+            <li role="presentation"><a role="menuitem" href="http://velkommen.ku.dk/om-webstedet/cookie-og-privatlivspolitik">Cookies og privatlivspolitik</a></li>
+            <li role="presentation"><a role="menuitem" href="http://informationssikkerhed.ku.dk">Informationssikkerhed</a></li>
+            <li role="presentation"><a role="menuitem" href="https://om.ku.dk/indeks/">A-Å-indeks</a></li>
           </ul>
           <div class="social-items">
             <h3 data-heading="open" class="footer-heading">Mød KU på</h3>
@@ -105,23 +105,14 @@
 <script>
   var pageTitle = 'Titel';
 </script>
-<script async defer src="https://bootstrap.secure.ku.dk/scripts/valid_search_engines_da.js"></script>
-{% if site.github %}
-<script src="{{ site.baseurl }}/dist/js/bootstrap.min.js"></script>
+<script async defer src="https://bootstrap.secure.ku.dk/scripts/valid_search_engines_da.js"></script> {% if site.github %} <script src="{{ site.baseurl }}/dist/js/bootstrap.min.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script async defer src="{{ site.baseurl }}/assets/js/ie10-viewport-bug-workaround.js"></script>
-{% else %}
-<script src="{{ site.baseurl }}/dist/js/bootstrap.js"></script>
-{% endif %}
-{% if page.category == "kurser" %}
+<script async defer src="{{ site.baseurl }}/assets/js/ie10-viewport-bug-workaround.js"></script> {% else %} <script src="{{ site.baseurl }}/dist/js/bootstrap.js"></script> {% endif %} {% if page.category == "kurser" %}
 <!-- Kurser.ku.dk -->
-<script src="{{ site.baseurl }}/assets/js/kurser.ku.dk/kurser.min.js"></script>
-{% endif %}
-{% if page.slug != "examples" %}
+<script src="{{ site.baseurl }}/assets/js/kurser.ku.dk/kurser.min.js"></script> {% endif %} {% if page.slug != "examples" %}
 <!-- Documentation extra - not for production -->
 <script async defer src="{{ site.baseurl }}/assets/js/docs.min.js"></script>
-<!-- //Documentation extra - not for production -->
-{% endif %}
+<!-- //Documentation extra - not for production --> {% endif %}
 <!-- {% if page.slug == "examples" %}
 <script src="{{ site.baseurl }}/assets/js/mmenu/jquery.mmenu.all.min.js"></script>
 <script src="{{ site.baseurl }}/custom/ku-mobile-menu.js"></script>
@@ -131,7 +122,6 @@
   // Only use under development - set active left menu item
   $(function() {
     setActiveLinks();
-
     $('#leftmenu .nav li a').click(function() {
       $('#leftmenu .nav li').removeClass('active');
       $(this).parent().addClass('active');
