--- a/less/faculties/samf.less
+++ b/less/faculties/samf.less
@@ -139,7 +139,7 @@ h2 {
 
     &.outlined {
       border: 1px solid @samf-sub_3;
-      color: @ku-gridbox-text;
+      color: @samf-sub_3;
 
       &:hover {
         border: 1px solid @samf-sub_3-hover;
