--- a/less/ku-cms-components.less
+++ b/less/ku-cms-components.less
@@ -138,7 +138,7 @@ nav {
     }
     @media (min-width: @screen-sm) {
       &:first-child {
-        margin-top: @grid-gutter-height;
+        margin-top: @rightcolumn-top;
       }
     }
 
@@ -184,7 +184,7 @@ nav {
 .right-side {
   .pull-right;
   @media (max-width: @screen-xs-max) {
-    margin-top: @grid-gutter-height;
+    margin-top: @rightcolumn-top;
   }
   @media (min-width: @screen-sm) {
     .flexiblebox,
@@ -192,7 +192,7 @@ nav {
     .gcitem,
     .panel {
       &:first-child {
-        margin-top: @grid-gutter-height;
+        margin-top: @rightcolumn-top;
       }
     }
   }
