--- a/less/variables.less
+++ b/less/variables.less
@@ -157,7 +157,7 @@
 
 // KU thumbnaiuls size
 @ku-thumbnails-size:    74px;
-@rightcolumn-top: 23px;//75px;
+@ku-rightcolumn-top: 75px;
 
 //== Scaffolding
 //
