--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -119,13 +119,13 @@ body {
       }
     }
 
-    .panel-accordion {
-      // Remove unwanted spacing in Accordion Editor dialog
-      ~ .accordion-hidden {
-        + .panel-accordion {
-          margin-top: -16px;
-        }
-      }
-    }
+    // .panel-accordion {
+    //   // Remove unwanted spacing in Accordion Editor dialog
+    //   ~ .accordion-hidden {
+    //     + .panel-accordion {
+    //       margin-top: -16px;
+    //     }
+    //   }
+    // }
   }
 }
