Table bottom margin

--- a/less/tables.less
+++ b/less/tables.less
@@ -42,7 +42,7 @@ th {
   width: 100%;
   max-width: 100%;
   //table-layout: fixed;
-  margin-bottom: @line-height-computed;
+  margin-bottom: 15px;
   // Cells
   > tfoot,
    > thead,
