--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -70,6 +70,34 @@
     margin-right: 3px;
   }
 }
+
+.subtitles-menu {
+    display:none;
+    position:absolute;
+    bottom:14.8%;
+    right:20px;
+    background:#666;
+    list-style-type:none;
+    margin:0;
+    padding:0;
+    width:100px;
+    padding:10px;
+}
+
+.subtitles-menu li {
+    padding:0;
+    text-align:center;
+}
+
+.subtitles-menu li button {
+    border:none;
+    background:#000;
+    color:#fff;
+    cursor:pointer;
+    width:90%;
+    padding:2px 5px;
+    border-radius:2px;
+}
 // Make input range visible in IE - why, oh why...
 
 input[type=range]::-ms-track {
